fix: repair Gateway certificate issuance, Kerberos config loading and service-group picker
- Load Hadoop XML resources as files: Configuration.addResource(String) resolves the
  argument on the classpath, so the uploaded core-site.xml/hdfs-site.xml were silently
  ignored (quiet mode hides the miss). hadoop.security.authentication stayed unset and
  UserGroupInformation.loginUserFromKeytabAndReturnUGI() quietly returned the SIMPLE
  user, which surfaced as "SIMPLE authentication is not enabled. Available:[TOKEN, KERBEROS]".
  Fail fast with an actionable message when the keytab, krb5.conf or the Kerberos
  configuration is unusable, and use the same loader in the gateway bundle synchronizer.
- Accept the CA private keys operators actually have: PKCS#8 (plain/encrypted), PKCS#1 RSA
  and SEC1 EC, optionally protected by HFG_RPC_CA_KEY_PASSWORD. Validate the issuer
  certificate (CA:TRUE, keyCertSign, validity) and bind not_after as a SQL timestamp so
  PostgreSQL accepts the gateway_certificate insert.
- Surface backend failures in the UI: download() reports the ProblemDetail detail, the
  certificate dialog keeps the message visible, and database errors return a readable
  ProblemDetail instead of a bare 500.
- Replace the free-text service group field in the user form with a select fed by
  /api/v1/system/service-groups.
- Store the whole provisioning cause chain and log the stack trace on retry failures.